# chatgpt-fastapi

./: .gitignore  README.md  add_new_user_script.py  generator.env  pyproject.toml  setup.cfg
chatgpt_fastapi/: api_utils.py  database.py  main.py  models.py  parser.py  randomizer.py  schemas.py  services.py  users.py
chatgpt_fastapi/templates/: base.html  delete_parsing_set.html  generate_texts.html  index.html  login.html  texts_parsing_sets.html
tests/: api_test.py
